fix: add proper z-index to interaction overlay

--- a/src/renderer/Interactable/InteractionOverlay/interaction-overlay.css
+++ b/src/renderer/Interactable/InteractionOverlay/interaction-overlay.css
@@ -4,6 +4,7 @@
   position: fixed;
   right: 0;
   top: var(--size--normal);
+  z-index: var(--z-index--control);
 }
 
 #interaction-overlay .interaction-overlay__action--open {
